--- a/main.html
+++ b/main.html
@@ -6,6 +6,8 @@
     <title>Page Title</title>
 </head>
 <body>
-   SOWLMGT 
+    <div style="text-align: center;">
+  <h1>SOWLMGT </h1> 
+    </div>
 </body>
 </html>
